# lexsim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  lefthook.yml
.github/workflows/: ci.yml
benches/: tokenize_bench.rs
examples/: eval_segmenter.rs  similarity_audit.rs  train_segmenter.rs
scripts/: cargo-env.sh
src/: hash.rs  lib.rs  main.rs  score.rs  sentiment.rs  stopwords.rs  tokenize.rs  tokens.rs
src/segmenter/: adaboost.rs  binary.rs  corpus.rs  eval.rs  features.rs  inference.rs  mod.rs
tests/: cli_integration.rs  segmenter_quality.rs  similarity_scale.rs  weighted_bm25.rs
training/: context_supplement.txt  model.json  seed_corpus.txt
