[package]
name = "lexsim"
version = "0.2.1"
edition = "2021"
description = "Dictionary-free, multilingual lexical similarity engine (tokenize + Jaccard + BM25 + content hash)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphaelements/lexsim"
keywords = ["nlp", "similarity", "bm25", "jaccard", "tokenizer"]
categories = ["text-processing"]
readme = "README.md"
rust-version = "1.85"
exclude = [".handoff/"]

[features]
default = []
cli = ["dep:serde", "dep:serde_json"]

[dependencies]
unicode-segmentation = "1"
unicode-normalization = "0.1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "lexsim"
path = "src/main.rs"
required-features = ["cli"]
