[package]
name = "lexsim"
version = "0.7.0"
edition = "2021"
description = "Dictionary-free, multilingual lexical similarity engine with hybrid word segmentation (tokenize + Jaccard + BM25 + TextRank + content hash)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphaelements/lexsim"
keywords = ["nlp", "similarity", "bm25", "jaccard", "tokenizer"]
categories = ["text-processing"]
readme = "README.md"
rust-version = "1.85"
exclude = [".handoff/"]

[features]
default = []
cli = ["dep:serde", "dep:serde_json"]

[dependencies]
unicode-segmentation = "1"
unicode-normalization = "0.1"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = "0.5"

[[bin]]
name = "lexsim"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "train_segmenter"
path = "examples/train_segmenter.rs"
required-features = ["cli"]

[[bench]]
name = "tokenize_bench"
harness = false
